<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/light_grey"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/iv_recipe"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/str_iv_recipe"
            android:scaleType="centerCrop"
            android:src="@drawable/b1_yogurt" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_meal_label"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/text_bg"
                android:gravity="center"
                android:text="@string/str_tv_meal_label"
                android:textColor="@color/yellow"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/str_tv_calorie"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/fire_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_tv_time"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/str_tv_min"
                    android:textColor="@color/yellow"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_save_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/str_iv_save_icon"
                android:src="@drawable/save_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_meal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/str_tv_meal_title"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>