<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Action Bar to go back to all menu page -->
    <TextView
        android:id="@+id/back_meal_planner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:drawablePadding="15dp"
        android:paddingTop="35dp"
        android:text="@string/meal_planner"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- NestedScrollView to make the whole screen scrollable -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        android:paddingBottom="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_meal_planner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_arrow_left"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/iv_go_left"
                    android:src="@drawable/chevron_left" />

                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_arrow_left"
                    app:layout_constraintTop_toTopOf="@+id/search" />

                <TextView
                    android:id="@+id/tv_start_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hyphen"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_arrow_left"
                    app:layout_constraintTop_toTopOf="@+id/search" />

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/iv_arrow_right"
                    app:layout_constraintTop_toTopOf="@+id/search" />

                <ImageView
                    android:id="@+id/iv_arrow_right"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/iv_go_right"
                    android:src="@drawable/chevron_right" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/saved_meals"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/saved_hor_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_week_item0"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:onClick="sunday_planner_action"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/sunday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <TextView
                    android:id="@+id/tv_week_item1"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/monday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <TextView
                    android:id="@+id/tv_week_item2"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/tuesday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <TextView
                    android:id="@+id/tv_week_item3"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/wednesday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <TextView
                    android:id="@+id/tv_week_item4"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/thursday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <TextView
                    android:id="@+id/tv_week_item5"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/friday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <TextView
                    android:id="@+id/tv_week_item6"
                    android:layout_width="365dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/saturday"
                    android:textColor="@color/black"
                    android:textSize="27sp"
                    app:drawableEndCompat="@drawable/chevron_right" />

                <Button
                    android:id="@+id/bt_confirm_order"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="80dp"
                    android:background="@color/yellow"
                    android:onClick="onConfirmOrderButtonClick"
                    android:text="@string/tv_bt_confirm_order"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_nav_bar_bg"
        android:elevation="10dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>