<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/background_img_yogurt"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:background="@drawable/b1_yogurt"
                android:contentDescription="@string/yogurt_background_img_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp"
                android:background="@drawable/rounded_top_corners_background"
                android:clipToPadding="false"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/str_tv_meal_title"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_tv_yogurt_time"
                            android:textColor="@color/yellow"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_tv_yogurt_calorie"
                            android:textColor="@color/yellow"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_tv_yogurt_diff"
                            android:textColor="@color/yellow"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/str_tv_yogurt_meal_desc"
                        android:textColor="@color/light_black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/str_tv_ing"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_ing_yogurt"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@drawable/yogurt"
                            app:shapeAppearanceOverlay="@style/roundedImageView" />

                        <TextView
                            android:id="@+id/tv_ing_yogurt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:gravity="center_vertical"
                            android:text="@string/str_tv_ing_yogurt"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_ing_berries"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@drawable/berries"
                            app:shapeAppearanceOverlay="@style/roundedImageView" />

                        <TextView
                            android:id="@+id/tv_ing_berries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:gravity="center_vertical"
                            android:text="@string/str_tv_ing_berries"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_ing_honey"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@drawable/honey"
                            app:shapeAppearanceOverlay="@style/roundedImageView" />

                        <TextView
                            android:id="@+id/tv_ing_honey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:gravity="center_vertical"
                            android:text="@string/str_tv_ing_honey"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_ing_granola"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@drawable/granola"
                            app:shapeAppearanceOverlay="@style/roundedImageView" />

                        <TextView
                            android:id="@+id/tv_ing_granola"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:gravity="center_vertical"
                            android:text="@string/str_tv_ing_granola"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <!-- TextView clipped to the top -->
    <TextView
        android:id="@+id/back_recipe_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:drawablePadding="15dp"
        android:paddingTop="35dp"
        android:text="RECIPE DETAILS"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/arrow_back"/>

</RelativeLayout>